vemo-app/main/default/objects/IncomeVerification__c/IncomeVerification__c.object-meta.xml
<CustomObject>
    <label>Income Verification</label>
    <nameField>
        <displayFormat>IV-{00000000}</displayFormat>
        <label>Income Verification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Income Verification</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>