vemo-app/main/default/objects/IncomeVerification__c/fields/AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncome__c</fullName>
    <label>(DEPRECATED)Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>