vemo-app/main/default/objects/IncomeVerification__c/fields/BeginDate__c.field-meta.xml
<CustomField>
    <fullName>BeginDate__c</fullName>
    <inlineHelpText>The date this Income began.</inlineHelpText>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>