vemo-app/main/default/objects/IncomeVerification__c/fields/DateReported__c.field-meta.xml
<CustomField>
    <fullName>DateReported__c</fullName>
    <inlineHelpText>The date the student reported their Income.</inlineHelpText>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>