vemo-app/main/default/objects/IncomeVerification__c/fields/DateVerified__c.field-meta.xml
<CustomField>
    <fullName>DateVerified__c</fullName>
    <defaultValue>Today()</defaultValue>
    <inlineHelpText>The date the student's Income was verified.</inlineHelpText>
    <label>Date Verified</label>
    <type>Date</type>
</CustomField>