vemo-app/main/default/objects/IncomeVerification__c/fields/EmploymentHistory__c.field-meta.xml
<CustomField>
    <fullName>EmploymentHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The related Employment History record.</inlineHelpText>
    <label>Employment History</label>
    <referenceTo>EmploymentHistory__c</referenceTo>
    <relationshipLabel>Income Verification</relationshipLabel>
    <relationshipName>Income_Verification</relationshipName>
    <type>Lookup</type>
</CustomField>