vemo-app/main/default/objects/IncomeVerification__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <inlineHelpText>The date this Income ends.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>