vemo-app/main/default/objects/IncomeVerification__c/fields/IncomePerMonth__c.field-meta.xml
<CustomField>
    <fullName>IncomePerMonth__c</fullName>
    <inlineHelpText>The student's monthly Income at the Date Reported.</inlineHelpText>
    <label>Income Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>