vemo-app/main/default/objects/IncomeVerification__c/fields/IncomePerYear__c.field-meta.xml
<CustomField>
    <fullName>IncomePerYear__c</fullName>
    <formula>Round( IncomePerMonth__c *12,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The student's yearly Income at the Date Reported.</inlineHelpText>
    <label>Income Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>