vemo-app/main/default/objects/IncomeVerification__c/fields/IncomeUpdateReason__c.field-meta.xml
<CustomField>
    <fullName>IncomeUpdateReason__c</fullName>
    <inlineHelpText>The reason the student gave for the update to their income (New job, Promotion, etc).</inlineHelpText>
    <label>Income Update Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeVerificationUpdateReason</valueSetName>
    </valueSet>
</CustomField>