vemo-app/main/default/objects/IncomeVerification__c/fields/MonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncome__c</fullName>
    <label>(DEPRECATED)Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>