vemo-app/main/default/objects/IncomeVerification__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <inlineHelpText>Student related to this Income Verification.</inlineHelpText>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Income Verification</relationshipLabel>
    <relationshipName>Income_Verification</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>