vemo-app/main/default/objects/IncomeVerification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>The type of Income Verification (Reported vs Estimated).</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IncomeVerificationType</valueSetName>
    </valueSet>
</CustomField>