vemo-app/main/default/objects/IncomeVerification__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has the student's Income been verified?</inlineHelpText>
    <label>Verified</label>
    <type>Checkbox</type>
</CustomField>